--- a/main copy.html
+++ b/main copy.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Registro de Atividades - Sistema de Evidências</title>
     
-    <!-- Bibliotecas externas via CDN -->
+    <!-- Bibliotecas externas via CDN EDITADO-->
     <script src="https://cdn.jsdelivr.net/npm/dexie@3.2.1/dist/dexie.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
