--- a/index.html
+++ b/index.html
@@ -122,8 +122,8 @@
                         <select id="activityType" required>
                             <option value="">Selecione...</option>
                             <option value="Produção">Produção</option>
-                            <option value="Manutenção">Manutenção</option>
-                            <option value="Qualidade">Controle de Qualidade</option>
+                            <option value="Manutenção">Assar Salgados</option>
+                            <option value="Qualidade">Assar Pães</option>
                             <option value="Limpeza">Limpeza e Organização</option>
                             <option value="Outro">Outro</option>
                         </select>
