responsividades ajustadas com sucesso

--- a/index.html
+++ b/index.html
@@ -254,8 +254,8 @@
                     <div><i class="fas fa-inbox"></i></div>
                     <h3>Nenhuma atividade encontrada</h3>
                     <p>Registre sua primeira atividade no botão abaixo</p>
-                    <a href="#registro" class="btn nav-link">
-                        <i class="fas fa-plus-circle"></i> Registrar Atividade
+                    <a href="#registro" class="btn nav-link add-reg">
+                        <i class="fas fa-plus-circle add-reg-ico"></i> Registrar Atividade
                     </a>
                 </div>
             </div>
@@ -265,7 +265,7 @@
         <section id="relatorios" class="section">
             <h2><i class="fas fa-chart-bar"></i> Relatórios</h2>
 
-            <div class="card">
+            <div class="card card-filtro">
                 <h3><i class="fas fa-filter"></i> Filtros do Relatório</h3>
                 <div class="report-filters">
                     <div class="form-group">
