--- a/index.html
+++ b/index.html
@@ -68,25 +68,25 @@
             <h2><i class="fas fa-tachometer-alt"></i> Dashboard</h2>
 
             <div class="stats-grid">
-                <div class="stat-card card01">
+                <div class="stat-card stat-card1 card01">
                     <div class="stat-label">
                         <i class="fas fa-boxes"></i> Produção Total
                     </div>
                     <div class="stat-value" id="totalProduction">0</div>
                 </div>
-                <div class="stat-card card02">
+                <div class="stat-card stat-card02 card02">
                     <div class="stat-label">
                         <i class="fas fa-times-circle"></i> Perdas Totais
                     </div>
                     <div class="stat-value" id="totalLosses">0</div>
                 </div>
-                <div class="stat-card card03">
+                <div class="stat-card stat-card03 card03">
                     <div class="stat-label">
                         <i class="fas fa-chart-line"></i> Eficiência
                     </div>
                     <div class="stat-value" id="efficiency">0%</div>
                 </div>
-                <div class="stat-card card04">
+                <div class="stat-card stat-card04 card04">
                     <div class="stat-label">
                         <i class="fas fa-calendar-day"></i> Atividades Hoje
                     </div>
@@ -118,7 +118,7 @@
             <div class="card">
                 <form id="activityForm">
                     <div class="form-group">
-                        <label for="activityType"><i class="fas fa-tasks"></i> Tipo de Atividade</label>
+                        <label for="activityType"><i class="fas fa-tasks"></i> Tipo de Atividade</label>  
                         <select id="activityType" required>
                             <option value="">Selecione...</option>
                             <option value="Produção">Produção</option>
@@ -127,6 +127,7 @@
                             <option value="Limpeza">Limpeza e Organização</option>
                             <option value="Outro">Outro</option>
                         </select>
+                        
                     </div>
 
                     <div class="form-group">
